Wed Jan 22 23:24:50 2003  Tim Janik  <timj@gtk.org>

	* bsecontainer.[hc]: supply sequential ID with ::item-removed as this
	can't be retrieved afterwards.

	* bsecontainer.proc: export proc to actually fetch an item via its type
	and sequential id.

Tue Jan 21 03:42:08 2003  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.c (bse_midi_receiver_process_events): keep
	processing events until the specified max_tick_stamp is reached.

	* bseproject.[hc]: bse_project_keep_activated() keep the project
	from automatic deactivation until a certain tick stamp is reached.

	* bsesong.proc: added procedures to find a track for a part, suitable
	for live playing of notes and to synthesize track notes for immediate
	playback.

Mon Jan 20 11:18:02 2003  Tim Janik  <timj@gtk.org>

	* bseproject.[hcp]: changed playback and activation logic.
	project playback happens in stages activate, start_playback,
	stop_playback and deactivate. a project can be automatically
	stopped due to the sequencer reaching song ends, and a project
	can be automatically deactivated through a timeout.
	export the new interface in procedures.

	* bseglobals.[hc] (bse_idle_timed): added timeout functions.

Thu Jan 16 23:27:51 2003  Tim Janik  <timj@gtk.org>

	* bseproject.[hcp]*:

	* bsemain.c (bse_main_loop): start sequencer thread.

	* bsemididevice.[hc]: removed cruft.

	* bsemidireceiver.[hc]: added accessor to check whether some
	voices are still active.

	* bsepart.[hc]: keep track of the last tick and export it as
	property. more _SL fixes for functions/memebers protected by
	the sequencer lock.

	* bsemidisynth.c: set early context creation flag.

	* bsesnet.c: maintain user context creation setting.

	* bsesong.[hc]: integrate with sequencer updates.
	(bse_song_init): set early context creation and sequencing flags.

	* bsessequencer.[hc]: start switching sequencer code over from
	songs to supers. detect song playback ends.

	* bsesuper.[hc]: introduce flags to indicate need of early or